# Atlas-SMR-Core

./: Cargo.toml  README.md
.github/actions/checkout-dependencies/: action.yml
.github/workflows/: pull-request.yaml
benches/: request_pre_processor_benchmark.rs
src/: lib.rs
src/exec/: mod.rs
src/message/: mod.rs
src/metric/: mod.rs
src/networking/: client.rs  mod.rs
src/networking/serialize/: mod.rs
src/networking/signature_ver/: mod.rs
src/persistent_log/: mod.rs
src/request_pre_processing/: mod.rs
src/request_pre_processing/network/: mod.rs
src/request_pre_processing/tests/: mod.rs
src/request_pre_processing/work_dividers/: mod.rs
src/request_pre_processing/worker/: mod.rs
src/serialize/: mod.rs
src/smr_decision_log/: mod.rs
src/state_transfer/: mod.rs
src/state_transfer/divisible_state/: mod.rs
src/state_transfer/monolithic_state/: mod.rs
src/state_transfer/networking/: mod.rs
src/state_transfer/networking/serialize/: mod.rs
src/state_transfer/networking/signature_ver/: mod.rs
